add horizontal scroll and fix media file

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class='header__menu-overflow'>
-                        <div class='header__menu-small'>
+                        <div id="small" class='header__menu-small'>
                             <a class='header__menu-small-item' href='https://design.hse.ru/info/about'>О школе</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/join'>Поступающим</a>
                             <a class='header__menu-small-item' href='https://portfolio.hse.ru'>Студенческое портфолио</a>
@@ -87,6 +87,7 @@
                             <a class='header__menu-small-item m__long' href='https://hsedesignlab.ru'>Лаборатория дизайна</a>
                             <a class='header__menu-small-item m__short' href='https://hsedesignlab.ru'>Лаборатория</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/newspaper'>Новости</a>
+                            <a class='header__menu-small-item' href='https://design.hse.ru/newspaper'>Клуб выпускников</a>
                             <a class='header__menu-small-item' href='https://art.hse.ru/gallery'>HSE ART GALLERY</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/tv'>TV</a>
                             <a class='header__menu-small-item' href='https://art.hse.ru/vrteka'>VRTEKA</a>
@@ -209,7 +210,8 @@
     </header>
 
 
-    <script src="site_private.js"></script>
+    <script src="js/site_private.js"></script>
+    <script src="js/jquery.mousewheel.js"></script>
 
 </body>
 
