added horisontal scroll

--- a/app/index.html
+++ b/app/index.html
@@ -77,15 +77,16 @@
                             <a class='header__menu-big-item' href='https://creativemap.hse.ru'>Все курсы</a>
                         </div>
                     </div>
-                    <div class='header__menu-overflow'>
-                        <div id="small" class='header__menu-small'>
+                    <div id="draggable" class='header__menu-overflow'>
+
+                        <div class='header__menu-small'>
                             <a class='header__menu-small-item' href='https://design.hse.ru/info/about'>О школе</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/join'>Поступающим</a>
                             <a class='header__menu-small-item' href='https://portfolio.hse.ru'>Студенческое портфолио</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/info/students'>Студентам</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/edu/schedule'>Расписание</a>
-                            <a class='header__menu-small-item m__long' href='https://hsedesignlab.ru'>Лаборатория дизайна</a>
-                            <a class='header__menu-small-item m__short' href='https://hsedesignlab.ru'>Лаборатория</a>
+                            <a class='header__menu-small-item  m__long' href='https://hsedesignlab.ru'>Лаборатория дизайна</a>
+                            <a class='header__menu-small-item  m__short' href='https://hsedesignlab.ru'>Лаборатория</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/newspaper'>Новости</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/newspaper'>Клуб выпускников</a>
                             <a class='header__menu-small-item' href='https://art.hse.ru/gallery'>HSE ART GALLERY</a>
@@ -96,6 +97,7 @@
                                 <a class='header__menu-small-item' href='https://art.hse.ru'>Современное искусство</a>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
