disabled media.scss

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
                             <div class='header__top-arr'></div>
                         </div>
                         <div class='header__top-right'>
+                            <a class="header__openday header__lang" href="http://design.hse.ru/set_lang/en?return_url=http%3A%2F%2Fdesign.hse.ru%2F">EN</a>
                             <a class='header__openday' href='https://design.hse.ru/openday'>Дни открытых дверей</a>
                             <a class='header__tel-btn' href='https://design.hse.ru/questions-about-admission'></a>
                             <a class='header__tel-btn-long' href='https://design.hse.ru/join'>
@@ -66,7 +67,7 @@
             <div class='header__menu'>
                 <div class='container-fluid container-fluid__menu'>
                     <div class='header__menu-overflow'>
-                        <div class='header__menu-big'>
+                        <div class='header__menu-big draggable'>
                             <a class='header__menu-big-item' href='https://design.hse.ru/ba'>Бакалавриат</a>
                             <a class='header__menu-big-item' href='https://design.hse.ru/ma'>Магистратура</a>
                             <a class='header__menu-big-item m__long' href='https://design.hse.ru/dop'>Дополнительное образование</a>
@@ -77,9 +78,9 @@
                             <a class='header__menu-big-item' href='https://creativemap.hse.ru'>Все курсы</a>
                         </div>
                     </div>
-                    <div id="draggable" class='header__menu-overflow'>
+                    <div class='header__menu-overflow'>
 
-                        <div class='header__menu-small'>
+                        <div class='header__menu-small draggable'>
                             <a class='header__menu-small-item' href='https://design.hse.ru/info/about'>О школе</a>
                             <a class='header__menu-small-item' href='https://design.hse.ru/join'>Поступающим</a>
                             <a class='header__menu-small-item' href='https://portfolio.hse.ru'>Студенческое портфолио</a>
