--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" media="all" href="https://design.hse.ru/assets/new_hope/master-0737c25ecd6ab1fca8ff64361ba1b27807672b1eb48101f680010b5033e00ab4.css" />
     <!-- <link rel="stylesheet" media="all" href="https://design.hse.ru/assets/new_hope/header_private-571198606a8f4f12f34d1b5428ee3718f4375afc5933bedad94db09bdaec6606.css" /> -->
     <title>Document</title>
 </head>
@@ -214,7 +215,8 @@
 
 
     <script src="js/site_private.js"></script>
-    <script src="js/jquery.mousewheel.js"></script>
+    <script src="https://design.hse.ru/assets/new_hope/master-aa9cdae4138d1eae77169bfed78536bb98bafaf270d56b11be4d074fde794938.js"></script>
+    <!-- <script src="js/jquery.mousewheel.js"></script> -->
 
 </body>
 
