--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
     <meta name="google-site-verification" content="MKiYVFWwxvVphjT9cmMiEgQQtRCMVieBquG9z0ZGObA" />
 
-    <link rel="stylesheet" media="all" href="http://dev.design.hse.ru/assets/new_hope/master-a9a8a871ff2811eeefbfcba1e0cbf9825dd220b362d2ed9c98e9b21d367e845b.css" />
+    <link rel="stylesheet" media="all" href="http://dev.design.hse.ru/assets/new_hope/master-a9a8a871ff2811eeefbfcba1e0cbf9825dd220b362d2ed9c98e9b21d367e845b.css">
     <!-- Google Analytics -->
     <style>
         .async-hide {
