fixed menu and added slider

--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,9 @@
     <meta content='width=device-width' name='viewport'>
 
     <meta name="google-site-verification" content="MKiYVFWwxvVphjT9cmMiEgQQtRCMVieBquG9z0ZGObA" />
-
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" media="all" href="http://dev.design.hse.ru/assets/new_hope/master-a9a8a871ff2811eeefbfcba1e0cbf9825dd220b362d2ed9c98e9b21d367e845b.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- Google Analytics -->
     <style>
         .async-hide {
@@ -155,7 +156,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <body class='bp-4'>
     <!-- <link rel="stylesheet" media="all" href="http://dev.design.hse.ru/assets/new_hope/header_private-39efc376be8a604f24018c42e4c6d422e1b1394251285d59fa8257f172fcc914.css" /> -->
-    <link rel="stylesheet" href="css/main.css">
     <div class='header__top-hole header__private'></div>
     <header class='header__private'>
         <div class='header__relative'>
@@ -550,20 +550,40 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <div class='col-12 col-lg-4 col-md-12 col-xl-4 information__item-text-wrap'>
-                        <div class='information__item-text information__item-text-padding'>
-                            <h4 class='information__item-title'>
-                                <a href="https://design.hse.ru/openday" class="information__item-title-link  page-edi" data-wid="223" data-wfid="1573">Дни открытых дверей
+                        <div class="test_container">
+                            <div class="test_item">
+                                <div class='information__item-text information__item-text-padding'>
+                                    <h4 class='information__item-title'>
+                                        <a href="https://design.hse.ru/openday" class="information__item-title-link  page-edi" data-wid="223" data-wfid="1573">Дни открытых дверей
 </a></h4>
-                            <div class='information__item-subtitle page-edi' data-lang='ru' data-wfid='1576' data-wid='223' id='w-223'>
-                                <p>Узнайте об особенностях учебных программ и вступительных испытаний. Дни открытых дверей проходят в онлайн-формате — просим регистрироваться заранее, чтобы получить ссылку на эфир.<br />
-                                    <strong>​​​</strong></p>
-                            </div>
-                        </div>
-                        <div class='information__item-bottom-small'>
-                            <a href="https://design.hse.ru/info/openday" target="_self" class="button button__black width320"><span>
+                                    <div class='information__item-subtitle page-edi' data-lang='ru' data-wfid='1576' data-wid='223' id='w-223'>
+                                        <p>Узнайте об особенностях учебных программ и вступительных испытаний. Дни открытых дверей проходят в онлайн-формате — просим регистрироваться заранее, чтобы получить ссылку на эфир.<br />
+                                            <strong>​​​</strong></p>
+                                    </div>
+                                </div>
+                                <div class='information__item-bottom-small'>
+                                    <a href="https://design.hse.ru/info/openday" target="_self" class="button button__black width320"><span>
 Зарегистрироваться
 </span>
 </a></div>
+                            </div>
+                            <div class="test_item">
+                                <div class='information__item-text information__item-text-padding'>
+                                    <h4 class='information__item-title'>
+                                        <a href="https://design.hse.ru/openday" class="information__item-title-link  page-edi" data-wid="223" data-wfid="1573">Дни открытых дверей
+</a></h4>
+                                    <div class='information__item-subtitle page-edi' data-lang='ru' data-wfid='1576' data-wid='223' id='w-223'>
+                                        <p>Узнайте об особенностях учебных программ и вступительных испытаний. Дни открытых дверей проходят в онлайн-формате — просим регистрироваться заранее, чтобы получить ссылку на эфир.<br />
+                                            <strong>​​​</strong></p>
+                                    </div>
+                                </div>
+                                <div class='information__item-bottom-small'>
+                                    <a href="https://design.hse.ru/info/openday" target="_self" class="button button__black width320"><span>
+Зарегистрироваться
+</span>
+</a></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1791,6 +1811,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <script src="http://dev.design.hse.ru/assets/new_hope/master-f3c4343feb0481fab4f8fd3f3bf49cd3ad6e328be1350d564d6a54bc237aa958.js"></script>
     <script src="js/site_private.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
         var page_id = "4";
     </script>
