added another slider

--- a/app/index.html
+++ b/app/index.html
@@ -545,8 +545,79 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </div>
                         <div class='information__item-slider-navi'>
-                            <div class='information__item-slider-left'></div>
+                            <div class='information__item-slider-left slick-prev slick-arrow'></div>
                             <div class='information__item-slider-right'></div>
+                        </div>
+                    </div>
+                    <div class='col-12 col-lg-4 col-md-12 col-xl-4 information__item-text-wrap'>
+                        <div class="test_container">
+                            <div class="information_item">
+                                <div class='information__item-text information__item-text-padding'>
+                                    <h4 class='information__item-title'>
+                                        <a href="https://design.hse.ru/openday" class="information__item-title-link  page-edi" data-wid="223" data-wfid="1573">Дни открытых дверей
+</a></h4>
+                                    <div class='information__item-subtitle page-edi' data-lang='ru' data-wfid='1576' data-wid='223' id='w-223'>
+                                        <p>Узнайте об особенностях учебных программ и вступительных испытаний. Дни открытых дверей проходят в онлайн-формате — просим регистрироваться заранее, чтобы получить ссылку на эфир.<br />
+                                            <strong>​​​</strong></p>
+                                    </div>
+                                </div>
+                                <div class='information__item-bottom-small'>
+                                    <a href="https://design.hse.ru/info/openday" target="_self" class="button button__black width320"><span>
+Зарегистрироваться
+</span>
+</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class='first_level js__block-item widgets_slider_with_text' data-wid='' id='' name=''>
+
+
+
+
+
+
+        <div class='container-fluid'>
+            <div class='information__item'>
+                <div class='row'>
+                    <div class='col-12 col-lg-8 col-md-12 col-xl-8 test__item-slider-wrap'>
+                        <div class='test__item-slider slider-edi' data-wid='223' data-wrid='1577' href='/admin/widgets_images_control/4/1577'>
+                            <div class='test__item-slider-piece'>
+                                <a href="https://design.hse.ru/openday" class="test__item-slider-img" data-wid="223" data-wfid="95477"><img alt="" data-lazy="/system/widget_fields/field_attachments/000/095/477/large_80/IMG_7716_corr.jpg?1570087036" data-res="/system/widget_fields/field_attachments/000/095/477/large_80/IMG_7716_corr.jpg?1570087036" src="http://dev.design.hse.ru/system/widget_fields/field_attachments/000/095/477/large_80/IMG_7716_corr.jpg?1570087036"
+                                    />
+                                </a>
+                                <div class='information__item-bottom'>
+                                </div>
+                            </div>
+                            <div class='test__item-slider-piece'>
+                                <a href="https://design.hse.ru/openday" class="test__item-slider-img" data-wid="223" data-wfid="95483"><img alt="" data-lazy="/system/widget_fields/field_attachments/000/095/483/large_80/IMG_1124_corr.jpg?1570087036" data-res="/system/widget_fields/field_attachments/000/095/483/large_80/IMG_1124_corr.jpg?1570087036" src="http://dev.design.hse.ru/system/widget_fields/field_attachments/000/095/483/large_80/IMG_1124_corr.jpg?1570087036"
+                                    />
+                                </a>
+                                <div class='information__item-bottom'>
+                                </div>
+                            </div>
+                            <div class='test__item-slider-piece'>
+                                <a href="https://design.hse.ru/openday" class="test__item-slider-img" data-wid="223" data-wfid="95489"><img alt="" data-lazy="/system/widget_fields/field_attachments/000/095/489/large_80/IMG_5333_corr.jpg?1570087036" data-res="/system/widget_fields/field_attachments/000/095/489/large_80/IMG_5333_corr.jpg?1570087036" src="http://dev.design.hse.ru/system/widget_fields/field_attachments/000/095/489/large_80/IMG_5333_corr.jpg?1570087036"
+                                    />
+                                </a>
+                                <div class='information__item-bottom'>
+                                </div>
+                            </div>
+                            <div class='test__item-slider-piece'>
+                                <a href="https://design.hse.ru/openday" class="test__item-slider-img" data-wid="223" data-wfid="146226"><img alt="" data-lazy="/system/widget_fields/field_attachments/000/146/226/large_80/64614165_368930577142944_9204882825415753728_o.jpg?1570087712" data-res="/system/widget_fields/field_attachments/000/146/226/large_80/64614165_368930577142944_9204882825415753728_o.jpg?1570087712"
+                                        src="http://dev.design.hse.ru/system/widget_fields/field_attachments/000/146/226/large_80/64614165_368930577142944_9204882825415753728_o.jpg?1570087712" />
+                                </a>
+                                <div class='information__item-bottom'>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='test__item-slider-navi'>
+                            <div class='test__item-slider-left slick-prev slick-arrow'></div>
+                            <div class='test__item-slider-right'></div>
                         </div>
                     </div>
                     <div class='col-12 col-lg-4 col-md-12 col-xl-4 information__item-text-wrap'>
@@ -558,6 +629,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </a></h4>
                                     <div class='information__item-subtitle page-edi' data-lang='ru' data-wfid='1576' data-wid='223' id='w-223'>
                                         <p>Узнайте об особенностях учебных программ и вступительных испытаний. Дни открытых дверей проходят в онлайн-формате — просим регистрироваться заранее, чтобы получить ссылку на эфир.<br />
+                                            <strong>​​​</strong></p>
+                                    </div>
+                                </div>
+                                <div class='information__item-bottom-small'>
+                                    <a href="https://design.hse.ru/info/openday" target="_self" class="button button__black width320"><span>
+Зарегистрироваться
+</span>
+</a></div>
+                            </div>
+                            <div class="test_item">
+                                <div class='information__item-text information__item-text-padding'>
+                                    <h4 class='information__item-title'>
+                                        <a href="https://design.hse.ru/openday" class="information__item-title-link  page-edi" data-wid="223" data-wfid="1573">Дни открытых дверей
+</a></h4>
+                                    <div class='information__item-subtitle page-edi' data-lang='ru' data-wfid='1576' data-wid='223' id='w-223'>
+                                        <p>1111111111111111111111111Дни открытых дверей проходят в онлайн-формате — просим регистрироваться заранее, чтобы получить ссылку на эфир.<br />
+                                            <strong>​​​</strong></p>
+                                    </div>
+                                </div>
+                                <div class='information__item-bottom-small'>
+                                    <a href="https://design.hse.ru/info/openday" target="_self" class="button button__black width320"><span>
+Зарегистрироваться
+</span>
+</a></div>
+                            </div>
+                            <div class="test_item">
+                                <div class='information__item-text information__item-text-padding'>
+                                    <h4 class='information__item-title'>
+                                        <a href="https://design.hse.ru/openday" class="information__item-title-link  page-edi" data-wid="223" data-wfid="1573">Дни открытых дверей
+</a></h4>
+                                    <div class='information__item-subtitle page-edi' data-lang='ru' data-wfid='1576' data-wid='223' id='w-223'>
+                                        <p>Узнdfdfdfdfdfdfльных испgfgfgfх дверей прохоassdfasdfsadf в онлайн-формате — просим регистрироваться заранее, чтобы получить ссылку на эфир.<br />
                                             <strong>​​​</strong></p>
                                     </div>
                                 </div>
