--- a/app/index.html
+++ b/app/index.html
@@ -1901,7 +1901,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     <script src="http://dev.design.hse.ru/assets/new_hope/master-f3c4343feb0481fab4f8fd3f3bf49cd3ad6e328be1350d564d6a54bc237aa958.js"></script>
-    <script src="js/site_private.js"></script>
+    <!-- <script src="js/site_private.js"></script> -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
         var page_id = "4";
